# chyron

./: Cargo.toml  README.md  install.sh
src/: app.rs  cache.rs  config.rs  feeds.rs  main.rs  ticker.rs  ui.rs
